# leetcode-intelligence

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Dockerfile  Makefile  README.md  agent.md  architecture.d2  data.txt  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini  test_mcp_client.py  vitest.config.ts  vitest.workspace.ts
.adrs/: 001-multi-package-monorepo-structure.md  002-tailnet-composable-authentication.md  README.md  goal.md
.github/: dependabot.yml
services/leetcode-submission-classifier/: Makefile  clustering_rules.yaml  package.json  pyproject.toml  tsconfig.json
services/leetcode-submission-classifier/artifacts/: benchmark-20260624T093117Z.json  benchmark-20260624T093117Z.problems.json  benchmark-20260624T093117Z.submissions.json  benchmark-20260624T093643Z.json  benchmark-20260624T093643Z.problems.json  benchmark-20260624T093643Z.submissions.json  benchmark-20260624T093729Z.json  benchmark-20260624T093729Z.problems.json  benchmark-20260624T093729Z.submissions.json  benchmark-20260624T093800Z.json  benchmark-20260624T093800Z.problems.json  benchmark-20260624T093800Z.submissions.json  benchmark-20260624T093828Z.json  benchmark-20260624T093828Z.problems.json  benchmark-20260624T093828Z.submissions.json  benchmark-20260624T093903Z.json  benchmark-20260624T093903Z.problems.json  benchmark-20260624T093903Z.submissions.json  benchmark-20260624T094819Z.problems.json  benchmark-20260624T095024Z.problems.json  benchmark-20260624T095230Z.problems.json  latest-structure-clusters-labeled.json  latest-structure-clusters.json
services/leetcode-submission-classifier/artifacts/20260624T083624624650Z-e336d2da/: latest-structure-clusters-labeled.json  latest-structure-clusters-labeled.problems.json  latest-structure-clusters-labeled.submissions.json
services/leetcode-submission-classifier/artifacts/20260624T084148686968Z-ef341896/: latest-structure-clusters.json  latest-structure-clusters.problems.json  latest-structure-clusters.submissions.json
services/leetcode-submission-classifier/benchmark/: generate_python_corpus_fixtures.py
services/leetcode-submission-classifier/benchmark/fixtures/corpus/: 001-01-matrix.solution1.py  001-01-matrix.solution2.py  001-01-matrix.solution3.py  002-1-bit-and-2-bit-characters.solution1.py  003-132-pattern.solution1.py  004-2-keys-keyboard.solution1.py  005-24-game.solution1.py  005-24-game.solution2.py  006-3sum-closest.solution1.py  007-3sum-smaller.solution1.py  008-3sum-with-multiplicity.solution1.py  009-3sum.solution1.py  009-3sum.solution2.py  010-4-keys-keyboard.solution1.py  010-4-keys-keyboard.solution2.py  011-4sum-ii.solution1.py  012-4sum.solution1.py  012-4sum.solution2.py  012-4sum.solution3.py  013-a-number-after-a-double-reversal.solution1.py  014-abbreviating-the-product-of-a-range.solution1.py  015-absolute-difference-between-maximum-and-minimum-k-elements.solution1.py  015-absolute-difference-between-maximum-and-minimum-k-elements.solution2.py  016-account-balance-after-rounded-purchase.solution1.py  017-accounts-merge.solution1.py  018-add-and-search-word-data-structure-design.solution1.py  019-add-binary.solution1.py  019-add-binary.solution2.py  020-add-bold-tag-in-string.solution1.py  020-add-bold-tag-in-string.solution2.py  021-add-digits.solution1.py  022-add-edges-to-make-degrees-of-all-nodes-even.solution1.py  023-add-minimum-number-of-rungs.solution1.py  024-add-one-row-to-tree.solution1.py  025-add-strings.solution1.py  026-add-to-array-form-of-integer.solution1.py  027-add-two-integers.solution1.py  028-add-two-numbers-ii.solution1.py  029-add-two-numbers.solution1.py  030-add-two-polynomials-represented-as-linked-lists.solution1.py  (+4748 more)
services/leetcode-submission-classifier/scripts/: repair-submission-indentation.ts
services/leetcode-submission-classifier/src/: ast_discovery.py  config.py  submission-ast-cluster-poc.ts  submission_ast_cluster_inputs.py  submission_ast_cluster_poc.py
services/leetcode-submission-classifier/tests/: submissionAstClusterPoc.test.ts
src/: qa.py
(+359 files in other folders)
