[build-system]
requires = ["setuptools>=71"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-qa"
version = "0.1.0"
description = "LeetCode Q&A workspace"
authors = [{name = "OpenHands", email = "openhands@all-hands.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "leetcode-submissions",
    "leetcode-mcp-server",
    "leetcode-ingestor",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.packages.find]
exclude = ["*"]  # workspace root — no Python to ship

[tool.uv.workspace]
members = ["packages/submission_server", "packages/mcp-server", "packages/ingestor"]

[tool.uv.sources]
leetcode-submissions = { workspace = true }
leetcode-mcp-server  = { workspace = true }
leetcode-ingestor    = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = ["packages/submission_server/src", "packages/mcp-server/src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
